# streamlit-pptx

./: .gitignore  chart-01.pptx  pyproject.toml  test.ipynb
src/dashboard/: 0_Main.py
src/dashboard/domain/: ppt_downloader.py
src/dashboard/pages/: 1_Dashboard.py
src/dashboard/pages/dashboard/: charts.py  data.py
src/powerpoint/: ppt.py
src/powerpoint/constants/: data_type_map.py  layouts.py  sizes.py
src/powerpoint/numpy/: bridge.py
